dev/Service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sample-root
  name: sample-root
spec:
  ports:
  - name: 9081
    port: 8080
    protocol: TCP
    targetPort: 9081
  selector:
    app: sample-root
  type: LoadBalancer
status:
  loadBalancer: {}
